--- a/Exam/assets/css/app.css
+++ b/Exam/assets/css/app.css
@@ -294,21 +294,22 @@ html {
   padding-top: 20px;
   padding-bottom: 20px;
   border: none;
+  transition: none;
   outline: none;
-}
-@media screen and (min-width: 768px) and (max-width: 992px) {
-  .search--input {
-    max-width: calc(100vw - 61px);
-  }
-}
-@media screen and (max-width: 768px) {
-  .search--input {
-    max-width: 100%;
-  }
 }
 @media screen and (max-width: 540px) {
   .search--input {
     padding-left: 10px;
+  }
+}
+@media screen and (min-width: 540px) and (max-width: 992px) {
+  .search--input {
+    max-width: calc(100vw - 61px);
+  }
+}
+@media screen and (max-width: 576px) {
+  .search--input {
+    max-width: 100%;
   }
 }
 .search--input::placeholder {
@@ -787,7 +788,7 @@ html {
 }
 @media screen and (min-width: 1400px) {
   .book-now--content {
-    margin: 220px 300px 120px;
+    margin: 220px auto 120px;
   }
 }
 @media screen and (max-width: 992px) {
